feat: Discord gradient and holographic role colors support